--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,7 +10,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css" </head> <body>
     <div class="container">
-        <div class="jumbotron text-center">
+        <div class="jumbotron shadow text-center">
             <h1>Friend Finder</h1>
             <hr>
             <div>
@@ -22,6 +22,11 @@
                     </button>
                 </a>
             </div>
+        </div>
+        <div class="container">
+            <a href="#">API Friends List</a>
+            |
+            <a href="#">GitHub Repo</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
