installed packages, successfully connected to localhost, transferred css code to html files

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -10,6 +10,19 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 </head>
+<style>
+    .jumbotron {
+        background: burlywood;
+        color: firebrick;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+
+    .btn {
+        background: firebrick;
+        color: #ffffff;
+    }
+</style>
 
 <body>
     <div class="container">
