--- a/app/public/home.html
+++ b/app/public/home.html
@@ -40,9 +40,9 @@
             </div>
         </div>
         <div class="container">
-            <a href="#">API Friends List</a>
+            <a href="/api/friends">API Friends List</a>
             |
-            <a href="#">GitHub Repo</a>
+            <a href="https://github.com/bksaechao/friend-finder">GitHub Repo</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
