--- a/app/public/home.html
+++ b/app/public/home.html
@@ -30,7 +30,7 @@
             <h1>Friend Finder</h1>
             <hr>
             <div>
-                <a href="#">
+                <a href="/survey">
                     <button type="button" class="btn btn-lg">
                         <h4>
                             Survey
@@ -42,7 +42,7 @@
         <div class="container">
             <a href="/api/friends">API Friends List</a>
             |
-            <a href="https://github.com/bksaechao/friend-finder">GitHub Repo</a>
+            <a target="_blank" href="https://github.com/bksaechao/friend-finder">GitHub Repo</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
