--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -165,9 +165,9 @@
         </div>
         <hr>
         <div class="container">
-            <a href="#">API Friends List</a>
+            <a href="/api/friends">API Friends List</a>
             |
-            <a href="#">GitHub Repo</a>
+            <a target="_blank" href="https://github.com/bksaechao/friend-finder">GitHub Repo</a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
