--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -10,6 +10,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
 </head>
+<style>
+    h4 {
+        font-weight: lighter;
+    }
+</style>
 
 <body>
     <div class="container">
