--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,7 +12,7 @@
 </head>
 <style>
     .jumbotron {
-        background: burlywood;
+        background: pink;
         color: firebrick;
         margin-top: 30px;
         margin-bottom: 10px;
