successfully linked submit button to the modal in the survey page

--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,127 +36,129 @@
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 2</h3>
         <h4>2</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q2">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 3</h3>
         <h4>3</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q3">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 4</h3>
         <h4>4</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q4">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 5</h3>
         <h4>5</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q5">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 6</h3>
         <h4>6</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q6">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 7</h3>
         <h4>7</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q7">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 8</h3>
         <h4>8</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q8">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 9</h3>
         <h4>9</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q9">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
         <h3>Question 10</h3>
         <h4>10</h4>
-        <select class="default-select shadow-sm rounded-pill" id="q1">
+        <select class="default-select shadow-sm rounded-pill" id="q10">
             <option value>Select an Option</option>
             <option value="1">1 (Strongly Disagree)</option>
             <option value="2">2</option>
             <option value="3">3</option>
             <option value="4">4</option>
-            <option value="5">1 (Strongly Agree)</option>
+            <option value="5">5 (Strongly Agree)</option>
         </select>
         <br>
         <br>
-        <button type="submit" class="btn btn-primary btn-block rounded-pill" id="submit">Submit</button>
+        <button type="submit" class="btn btn-primary btn-block rounded-pill" data-toggle="modal"
+            data-target="#results-modal" id="submit">Submit</button>
+        <!-- Match Modal -->
         <div id="results-modal" class="modal fade" role="dialog">
             <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">x</button>
-                        <h2 class="modal-title">
-                            <strong>Best Match</strong>
-                        </h2>
+                <div class="modal-content text-center">
+                    <div class="modal-header text-center">
+                        <h2 class="modal-title w-100 font-weight-bold">Best Match</h2>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
                     <div class="modal-body">
                         <h2 id="match-name"></h2>
@@ -175,16 +177,41 @@
             <a target="_blank" href="https://github.com/bksaechao/friend-finder">GitHub Repo</a>
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-</body>
+    <script type="text/javascript">
+        $('#submit').on("click", () => {
 
+            var newFriend = {
+                name: $("#name").val().trim(),
+                photo: $("#photo").val().trim(),
+                surveyScore: [
+                    $('#q1').val().trim(),
+                    $('#q2').val().trim(),
+                    $('#q3').val().trim(),
+                    $('#q4').val().trim(),
+                    $('#q5').val().trim(),
+                    $('#q6').val().trim(),
+                    $('#q7').val().trim(),
+                    $('#q8').val().trim(),
+                    $('#q9').val().trim(),
+                    $('#q10').val().trim()
+                ]
+            };
+
+            $.post("/api/friends", newFriend, function (data) {
+                $("#match-name").text(data.name);
+                $("#match-img").attr("src", data.photo)
+
+            })
+        });
+    </script>
+</body>
 
 </html>
