--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -30,7 +30,7 @@
         <input type="text" id="photo" class="form-control" placeholder="(required)" required>
         <hr>
         <h3>Question 1</h3>
-        <h4>1</h4>
+        <h4>You like the Ocean</h4>
         <select class="default-select shadow-sm rounded-pill" id="q1" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -42,7 +42,7 @@
         <br>
         <br>
         <h3>Question 2</h3>
-        <h4>2</h4>
+        <h4>High School Musical Rocks!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q2" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -54,7 +54,7 @@
         <br>
         <br>
         <h3>Question 3</h3>
-        <h4>3</h4>
+        <h4>Pokemon is cool!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q3" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -66,7 +66,7 @@
         <br>
         <br>
         <h3>Question 4</h3>
-        <h4>4</h4>
+        <h4>Anime is awesome!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q4" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -78,7 +78,7 @@
         <br>
         <br>
         <h3>Question 5</h3>
-        <h4>5</h4>
+        <h4>Coding is the coolest thing ever!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q5" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -90,7 +90,7 @@
         <br>
         <br>
         <h3>Question 6</h3>
-        <h4>6</h4>
+        <h4>Fish are friends, not food!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q6" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -102,7 +102,7 @@
         <br>
         <br>
         <h3>Question 7</h3>
-        <h4>7</h4>
+        <h4>Sun > Moon</h4>
         <select class="default-select shadow-sm rounded-pill" id="q7" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -114,7 +114,7 @@
         <br>
         <br>
         <h3>Question 8</h3>
-        <h4>8</h4>
+        <h4>Ramen is the best!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q8" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -126,7 +126,7 @@
         <br>
         <br>
         <h3>Question 9</h3>
-        <h4>9</h4>
+        <h4>Seafood is nasty!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q9" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -138,7 +138,7 @@
         <br>
         <br>
         <h3>Question 10</h3>
-        <h4>10</h4>
+        <h4>School is for fools!</h4>
         <select class="default-select shadow-sm rounded-pill" id="q10" required="required">
             <option value="">Please select an option</option>
             <option value="1">1 (Strongly Disagree)</option>
@@ -163,7 +163,7 @@
                     </div>
                     <div class="modal-body">
                         <h2 id="match-name"></h2>
-                        <img id="match-img" class="img-responsive" src="" style="max-height:250px;" alt="place-match">
+                        <img id="match-img" src="" style="max-height:250px;" alt="place-match">
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
